--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "canvas": "^2.6.1",
     "canvas2svg": "^1.0.16",
     "react": "16.13.0",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "shadow-cljs": "^2.11.18"
   }
 }
