--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "canvas": "^2.6.1",
     "canvas2svg": "^1.0.16",
     "react": "16.13.0",
-    "react-dom": "16.13.0"
+    "react-dom": "16.13.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "shadow-cljs": "^2.11.18"
