--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "canvas2svg": "^1.0.16",
+    "opentype.js": "^1.3.3",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-router": "^5.2.0",
