--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "canvas": "^2.6.1",
     "canvas2svg": "^1.0.16",
     "d3-scale": "^3.3.0",
+    "hersheytext": "^2.0.0",
     "opentype.js": "^1.3.3",
     "react": "16.13.0",
     "react-dom": "16.13.0",
