--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "canvas2svg": "^1.0.16",
     "d3-scale": "^3.3.0",
+    "d3-shape": "^3.2.0",
     "hersheytext": "^2.0.0",
     "opentype.js": "^1.3.3",
     "react": "16.13.0",
